@@ -1,3 +1,8 @@
+Fri Sep 27 17:12:48 1996  Barry Jaspan  <bjaspan@mit.edu>
+
+	* krb5.conf.proto: parameterize kdc hostname for remote server
+ 	testing
+
 Thu Sep 26 17:47:23 1996  Barry Jaspan  <bjaspan@mit.edu>
 
 	* krb5.conf.proto, kdc.conf.proto: use K5ROOT instead of /krb5
